feat: inclusion of new content and separation of the landing page into pages

--- a/css/blue-theme.css
+++ b/css/blue-theme.css
@@ -3076,7 +3076,7 @@ span.sm-info {
 /*------------------------------------------*/
 
 #hero-9 {
-  background-image: url(../images/hero-9.jpg);
+  background-image: url(../images/hero-9.png);
   padding-top: 160px;
   padding-bottom: 85px;
 }
